--- a/src/main/resources/deep/percentage/per-view.fxml
+++ b/src/main/resources/deep/percentage/per-view.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -104,8 +105,10 @@
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
-            <Hyperlink fx:id="githubLink" text="AmirJ0 - GitHub" />
-            <ImageView fx:id="icon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+            <Hyperlink fx:id="githubLink" onAction="#githubLinkAction" text="AmirJ0 - GitHub" />
+            <ImageView fx:id="iconView" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@images/icon.png" />
+            </ImageView>
         </HBox>
     </VBox>
 </AnchorPane>
