--- a/src/main/resources/deep/percentage/per-view.fxml
+++ b/src/main/resources/deep/percentage/per-view.fxml
@@ -13,15 +13,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deep.percentage.PerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deep.percentage.PerController">
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
-    <VBox fx:id="inputVbox" alignment="TOP_CENTER" layoutX="20.0" layoutY="14.0" prefHeight="370.0" prefWidth="270.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0">
+    <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="14.0" prefHeight="370.0" prefWidth="270.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0">
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
         </padding>
-        <HBox fx:id="inputTrueMarksHbox" alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -33,13 +33,13 @@
                     <Insets bottom="10.0" right="20.0" top="10.0" />
                 </padding>
             </Label>
-            <TextField fx:id="allMarkNum" prefHeight="39.0" prefWidth="119.0">
+            <TextField fx:id="allMark" prefHeight="39.0" prefWidth="119.0">
                 <font>
                     <Font name="IRANSansWeb" size="18.0" />
                 </font>
             </TextField>
         </HBox>
-        <HBox fx:id="inputFalseMarksHbox" alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -51,13 +51,13 @@
                     <Insets bottom="10.0" right="20.0" top="10.0" />
                 </padding>
             </Label>
-            <TextField fx:id="trueMarkNum" prefHeight="39.0" prefWidth="119.0">
+            <TextField fx:id="trueMark" prefHeight="39.0" prefWidth="119.0">
                 <font>
                     <Font name="IRANSansWeb" size="18.0" />
                 </font>
             </TextField>
         </HBox>
-        <HBox fx:id="inputAllMarksHbox" alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0">
+        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -69,7 +69,7 @@
                     <Insets bottom="10.0" right="20.0" top="10.0" />
                 </padding>
             </Label>
-            <TextField fx:id="falseMarkNum" prefHeight="39.0" prefWidth="119.0">
+            <TextField fx:id="falseMark" prefHeight="39.0" prefWidth="119.0">
                 <font>
                     <Font name="IRANSansWeb" size="18.0" />
                 </font>
@@ -80,14 +80,14 @@
             <Font name="IRANSansWeb" size="15.0" />
          </font>
       </Label>
-        <HBox fx:id="actionBtn" alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
             <padding>
                 <Insets bottom="10.0" left="15.0" right="15.0" top="15.0" />
             </padding>
             <VBox.margin>
                 <Insets bottom="5.0" />
             </VBox.margin>
-            <Button fx:id="calculateBtn" alignment="TOP_LEFT" mnemonicParsing="false" text="محاسبه">
+            <Button fx:id="calculateBtn" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#checkInputs" text="محاسبه">
             <font>
                <Font name="IRANSansWeb" size="13.0" />
             </font></Button>
@@ -101,7 +101,7 @@
             <Font name="IRANSansWeb" size="22.0" />
          </font>
       </Label>
-        <HBox fx:id="footer" alignment="CENTER" prefHeight="31.0" prefWidth="250.0" spacing="60.0">
+        <HBox alignment="CENTER" prefHeight="31.0" prefWidth="250.0" spacing="60.0">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
