--- a/src/main/resources/deep/percentage/per-view.fxml
+++ b/src/main/resources/deep/percentage/per-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Hyperlink?>
@@ -13,99 +14,105 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deep.percentage.PerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" styleClass="pane" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deep.percentage.PerController">
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
-    <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="14.0" prefHeight="370.0" prefWidth="270.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0">
+    <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="14.0" prefHeight="370.0" prefWidth="270.0" styleClass="vbox" stylesheets="@style.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0">
         <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
         </padding>
-        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <HBox alignment="CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" stylesheets="@style.css" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
-            <Label alignment="TOP_RIGHT" prefHeight="39.0" prefWidth="117.0" text="تعداد کل">
+            <Label alignment="CENTER" prefHeight="39.0" prefWidth="119.0" text="تعداد کل" textFill="WHITE">
                 <font>
-                    <Font name="IRANSansWeb" size="15.0" />
+                    <Font name="IRANSansWeb" size="20.0" />
                 </font>
-                <padding>
-                    <Insets bottom="10.0" right="20.0" top="10.0" />
-                </padding>
             </Label>
-            <TextField fx:id="allMark" prefHeight="39.0" prefWidth="119.0">
+            <TextField fx:id="allMark" alignment="CENTER" prefHeight="39.0" prefWidth="119.0" styleClass="text-fields" stylesheets="@style.css">
                 <font>
                     <Font name="IRANSansWeb" size="18.0" />
                 </font>
             </TextField>
         </HBox>
-        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <HBox alignment="CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
-            <Label alignment="TOP_RIGHT" prefHeight="39.0" prefWidth="117.0" text="تعداد درست">
+            <Label alignment="CENTER" prefHeight="39.0" prefWidth="119.0" text="تعداد درست" textFill="WHITE">
                 <font>
-                    <Font name="IRANSansWeb" size="15.0" />
+                    <Font name="IRANSansWeb" size="18.0" />
                 </font>
-                <padding>
-                    <Insets bottom="10.0" right="20.0" top="10.0" />
-                </padding>
             </Label>
-            <TextField fx:id="trueMark" prefHeight="39.0" prefWidth="119.0">
+            <TextField fx:id="trueMark" alignment="CENTER" prefHeight="39.0" prefWidth="119.0" styleClass="text-fields" stylesheets="@style.css">
                 <font>
                     <Font name="IRANSansWeb" size="18.0" />
                 </font>
             </TextField>
         </HBox>
-        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0">
+        <HBox alignment="CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
-            <Label alignment="TOP_RIGHT" prefHeight="39.0" prefWidth="117.0" text="تعداد غلط">
+            <Label alignment="CENTER" prefHeight="39.0" prefWidth="119.0" text="تعداد غلط" textFill="WHITE">
                 <font>
-                    <Font name="IRANSansWeb" size="15.0" />
+                    <Font name="IRANSansWeb" size="20.0" />
                 </font>
                 <padding>
-                    <Insets bottom="10.0" right="20.0" top="10.0" />
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
             </Label>
-            <TextField fx:id="falseMark" prefHeight="39.0" prefWidth="119.0">
+            <TextField fx:id="falseMark" alignment="CENTER" prefHeight="39.0" prefWidth="119.0" styleClass="text-fields" stylesheets="@style.css">
                 <font>
                     <Font name="IRANSansWeb" size="18.0" />
                 </font>
             </TextField>
         </HBox>
-      <Label fx:id="errorBox" prefHeight="30.0" prefWidth="245.0">
+      <Label fx:id="errorBox" alignment="CENTER" prefHeight="30.0" prefWidth="245.0" styleClass="box" stylesheets="@style.css" textFill="WHITE">
          <font>
             <Font name="IRANSansWeb" size="15.0" />
          </font>
+         <padding>
+            <Insets bottom="2.0" />
+         </padding>
       </Label>
-        <HBox alignment="TOP_CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+        <HBox alignment="CENTER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="40.0">
             <padding>
-                <Insets bottom="10.0" left="15.0" right="15.0" top="15.0" />
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
             </padding>
             <VBox.margin>
                 <Insets bottom="5.0" />
             </VBox.margin>
-            <Button fx:id="calculateBtn" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#checkInputs" text="محاسبه">
+            <Button fx:id="calculateBtn" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#checkInputs" prefHeight="37.0" styleClass="calculate-button" stylesheets="@style.css" text="محاسبه" textAlignment="CENTER" textFill="WHITE">
             <font>
                <Font name="IRANSansWeb" size="13.0" />
-            </font></Button>
-            <ChoiceBox fx:id="choiceMode" prefHeight="37.0" prefWidth="96.0" />
+            </font>
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor>
+            <HBox.margin>
+               <Insets />
+            </HBox.margin></Button>
+            <ChoiceBox fx:id="choiceMode" prefHeight="37.0" prefWidth="96.0" styleClass="calculate-button" stylesheets="@style.css" />
         </HBox>
-      <Label fx:id="result" alignment="CENTER" prefHeight="29.0" prefWidth="241.0">
+      <Label fx:id="result" alignment="CENTER" prefHeight="29.0" prefWidth="241.0" styleClass="box" stylesheets="@style.css" textFill="WHITE">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
          <font>
             <Font name="IRANSansWeb" size="22.0" />
          </font>
+         <padding>
+            <Insets bottom="2.0" />
+         </padding>
       </Label>
         <HBox alignment="CENTER" prefHeight="31.0" prefWidth="250.0" spacing="60.0">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
-            <Hyperlink fx:id="githubLink" onAction="#githubLinkAction" text="AmirJ0 - GitHub" />
+            <Hyperlink fx:id="githubLink" onAction="#githubLinkAction" text="AmirJ0 - GitHub" textAlignment="CENTER" textFill="WHITE" underline="true" />
             <ImageView fx:id="iconView" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                 <Image url="@images/icon.png" />
             </ImageView>
