--- a/src/main/resources/deep/percentage/per-view.fxml
+++ b/src/main/resources/deep/percentage/per-view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" styleClass="pane" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deep.percentage.PerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" styleClass="main-pane" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="deep.percentage.PerController">
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
@@ -95,7 +95,10 @@
             <HBox.margin>
                <Insets />
             </HBox.margin></Button>
-            <ChoiceBox fx:id="choiceMode" prefHeight="37.0" prefWidth="96.0" styleClass="calculate-button" stylesheets="@style.css" />
+            <ChoiceBox fx:id="choiceMode" prefHeight="37.0" prefWidth="96.0" styleClass="calculate-button" stylesheets="@style.css">
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor></ChoiceBox>
         </HBox>
       <Label fx:id="result" alignment="CENTER" prefHeight="29.0" prefWidth="241.0" styleClass="box" stylesheets="@style.css" textFill="WHITE">
          <VBox.margin>
